[tool.poetry]
authors = ["Niko Ehrenfeuchter <nikolaus.ehrenfeuchter@unibas.ch>"]
description = "Process metadata from various light-microscopy related formats."
name = "micrometa"
## a package 'micrometa' already exists on PyPI, so in case we'd ever want to
## publish it there we will need to rename /at least/ the package itself:
# name = "imcf-micrometa"
# packages = [{include = "micrometa", from = "src"}]
readme = "README.md"
version = "15.2.2"

[tool.poetry.dependencies]
imcflibs = "^1.4"
## in case we were to split the imcflibs package into separate versions for
## Python 2 and 3, we could specify them like this:
# imcflibs = {version = "^1.4", markers = "python_version < '3'"}
# imcflibs3 = {version = "^1.4", markers = "python_version >= '3'"}
olefile = "^0.46"
python = [">=2.7", "^3.8"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
