[tool.poetry]
authors = ["Niko Ehrenfeuchter <nikolaus.ehrenfeuchter@unibas.ch>"]
description = "Process metadata from various light-microscopy related formats."
## A package 'micrometa' already exists on PyPI, so for being able to publish
## it there we have to rename the package itself. Note that this has some
## potential for conflicts if someone was to install the 'micrometa' package in
## the same venv as this one, as the paths will overlap and therefore create an
## unpredictable mess! However, the perspective of renaming *our* package is not
## very tempting either...
name = "python-micrometa"
packages = [{include = "micrometa", from = "src"}]
readme = "README.md"
version = "15.2.2"

[tool.poetry.dependencies]
imcflibs = "^1.4"
## in case we were to split the imcflibs package into separate versions for
## Python 2 and 3, we could specify them like this:
# imcflibs = {version = "^1.4", markers = "python_version < '3'"}
# imcflibs3 = {version = "^1.4", markers = "python_version >= '3'"}
olefile = "^0.46"
# python = [">=2.7", "^3.8"]
python = ">=2.7"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
